# ics45c

example/: debug
example/app/: main.cpp  math.cpp  math.hpp  square.cpp  square.hpp
playground/app/: main.cpp
proj0/: compare  gather  solution
proj0/app/: main.cpp
proj1/: gather  run
proj1/app/: calculate.cpp  calculate.hpp  main.cpp
proj2/: CMakeLists.txt  gather
proj2/app/: cutpointSets.cpp  cutpointSets.hpp  gradedArtifacts.cpp  gradedArtifacts.hpp  main.cpp  scores.cpp  scores.hpp  students.cpp  students.hpp
proj2/inputs/: sample.txt
proj2/outputs/: sample.out
